fix(a11y): fix not switching the previous element when pressing Shift + Tab

--- a/src/Picker/styles/index.less
+++ b/src/Picker/styles/index.less
@@ -104,6 +104,7 @@
     padding-right: 32px;
     color: var(--rs-text-primary);
     background-color: var(--rs-input-bg);
+    outline: none;
   }
 
   &.rs-btn-lg &-textbox {
